update airlines component

--- a/src/app/components/airlines/update/update.component.html
+++ b/src/app/components/airlines/update/update.component.html
@@ -1,1 +1,121 @@
-<p>update works!</p>
+<div class="row">
+  <div class="col-2"></div>
+  <div class="col-4">
+    <form
+      #updateAirlineForm="ngForm"
+      (ngSubmit)="onSubmit(updateAirlineForm)"
+      novalidate
+      autocomplete="off"
+    >
+      <div class="text-center mb-4 text-light">
+        <p>Update Airline</p>
+      </div>
+
+      <div class="form-group mb-4">
+        <div class="form-group">
+          <input
+            #airlineF="ngModel"
+            ngModel
+            name="airlinename"
+            required
+            [ngClass]="{ 'is-invalid': airlineF.errors && airlineF.touched }"
+            type="text"
+            placeholder={{airline}}
+            id="airlinename"
+            class="form-control"
+            autocomplete="Airline Name"
+          />
+          <div
+            [hidden]="!(airlineF.errors?.required || airlineF.errors?.username)"
+            class="invalid-feedback"
+          >
+            Valid Airline is required
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group mb-4">
+        <div class="form-group">
+          <input
+            #countryidF="ngModel"
+            ngModel
+            name="countryid"
+            required
+            [ngClass]="{ 'is-invalid': countryidF.errors && countryidF.touched }"
+            type="text"
+            placeholder={{countryid}}
+            id="country"
+            class="form-control"
+            autocomplete="CountryID"
+          />
+          <div
+            [hidden]="!(countryidF.errors?.required || countryidF.errors?.username)"
+            class="invalid-feedback"
+          >
+            Valid Country Id is required
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group mb-4">
+        <div class="form-group">
+          <input
+            #useridF="ngModel"
+            ngModel
+            name="userid"
+            required
+            [ngClass]="{ 'is-invalid': useridF.errors && useridF.touched }"
+            type="text"
+            placeholder={{userid}}
+            id="userid"
+            class="form-control"
+            autocomplete="USER ID"
+          />
+          <div
+            [hidden]="!(useridF.errors?.required || useridF.errors?.username)"
+            class="invalid-feedback"
+          >
+            Valid User Id is required
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <button
+        [disabled]="!updateAirlineForm.form.valid"
+        class="btn btn-lg btn-primary btn-block"
+        type="submit"
+      >
+        Update
+      </button>
+
+      <a class="m-5 text-seccess" routerLink="/airlines">Cancel</a>
+    </form>
+    <hr />
+    <p class="mt-5 mb-3 text-muted text-center">&copy; 2020-2021</p>
+  </div>
+</div>
+
+
+ <ng-container  *ngIf="isUpdate"><p class='text-primary m-2'>your data is update</p>
+  <button class='btn btn-primary m-2' (click)="back()">Back</button></ng-container>
+ <ng-container  *ngIf="!isUpdate && !airline"><p class='text-danger m-2'>Your data is not update, try again letter.</p> <button class='btn btn-primary m-2' (click)="back()">Back</button>
+ </ng-container>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
