remove json display on view page

--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -1,8 +1,8 @@
 
 <div *ngIf="countryApi.countries| async as countries">
-  <pre>
+  <!-- <pre>
     {{ countries | json }}
-  </pre>
+  </pre> -->
   <table class="table">
     <thead>
       <tr>
