--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,8 +1,8 @@
 
 <div *ngIf="customerApi.customers| async as customers">
-   <pre>
+  <!--  <pre>
     {{ customers | json }}
-  </pre>
+  </pre> -->
   <table class="table">
     <thead>
       <tr>
