--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -1,8 +1,8 @@
 
 <div *ngIf="flightApi.flights| async as flights">
-  <pre>
+<!--   <pre>
     {{ flights | json }}
-  </pre>
+  </pre> -->
   <table class="table">
     <thead>
       <tr>
