--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -1,8 +1,8 @@
 
 <div *ngIf="ticketApi.tickets| async as tickets">
-  <pre>
+ <!--  <pre>
     {{ tickets | json }}
-  </pre>
+  </pre> -->
 
   <table class="table">
     <thead>
