--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="airlineApi.airlines| async as airlines">
-  <pre>
+  <!-- <pre>
     {{ airlines | json }}
-  </pre>
+  </pre> -->
   <table class="table">
     <thead>
       <tr>
@@ -26,7 +26,7 @@
         <td scope="row">{{airline.username}}</td>
         <td scope="row">
           <a [hidden]="rule!=='Admin'" routerLink="update" class='m-1'>
-            <i  class="fas fa-edit"> </i> 
+            <i  class="fas fa-edit"> </i>
           </a>
           <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
