update search flight and results page

--- a/src/app/components/flights/results/results.component.html
+++ b/src/app/components/flights/results/results.component.html
@@ -1,4 +1,4 @@
-<!--
+
 <div *ngIf="flights">
 
   <table class="table">
@@ -36,16 +36,19 @@
         </a>
       <a routerLink="insert" class="m-1">
         <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
+      </a>
+      <a routerLink="../../tickets" class='m-1'>
+        <i [hidden]="rule!=='Customer'" class="fas fa-ticket-alt"> </i>
       </a></td>
       </tr>
       </ng-container>
     </tbody>
 
     </table>
-</div>  -->
+</div>
 
-<p>results pages</p>
-<div *ngIf="flights">Hello</div>
+
+
 
 
 
