--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -28,9 +28,10 @@
           <a [hidden]="rule!=='Customer'" routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-      <a  [hidden]="rule!=='Customer'" routerlink="insert" class="m-1">
-        <i class="far fa-plus-square"> </i>
-      </a></td>
+        <a [hidden]="rule!=='Customer'" routerLink="insert" class='m-1'>
+          <i class="far fa-plus-square"> </i>
+        </a>
+      </td>
       </tr>
       </ng-container>
     </tbody>
