--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -8,9 +8,9 @@
       <tr>
       <th scope="col">#</th>
       <th scope="col">Id</th>
-      <th scope="col">Airline Id</th>
-      <th scope="col">Origin Country Id</th>
-      <th scope="col">Destination Country Id</th>
+      <th scope="col">Airline Name</th>
+      <th scope="col">Origin Country Name</th>
+      <th scope="col">Destination Country Name</th>
       <th scope="col">Departure Time</th>
       <th scope="col">Landing Time</th>
       <th scope="col">Remaning Tickets</th>
