--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -7,17 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{(isLogin)?user['email']:'anonymous@'}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li *ngIf="isLogin"><a class="dropdown-item" (click)="logout()" routerLink="/">Log Out</a></li>
+            <li *ngIf="!isLogin"><a class="dropdown-item" (click)="login()" routerLink="/">Log In</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" routerLink='about'>About FlightCRM</a></li>
           </ul>
@@ -27,7 +26,7 @@
         </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control m-2" type="search" placeholder="Search" aria-label="Search">
+        <input (keyup)="titleTyped($event)" class="form-control m-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light" routerLink='/search'>Flight search</button>
       </form>
     </div>
