update flight to getAllFlightsJoin

--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -23,9 +23,9 @@
       <tr>
         <th scope="row">{{inx}}</th>
         <td scope="row">{{flight.id}}</td>
-        <td scope="row">{{flight.airline_id}}</td>
-        <td scope="row">{{flight.origin_country_id}}</td>
-        <td scope="row">{{flight.destination_country_id}}</td>
+        <td scope="row">{{flight.airline_name}}</td>
+        <td scope="row">{{flight.origin_country_name}}</td>
+        <td scope="row">{{flight.destination_country_name}}</td>
         <td scope="row">{{flight.departure_time}}</td>
         <td scope="row">{{flight.landing_time}}</td>
         <td scope="row">{{flight.remaining_tickets}}</td>
