add caption to the main pages

--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -3,6 +3,7 @@
 <!--   <pre>
     {{ flights | json }}
   </pre> -->
+  <h1 class="display-2 text-center mb-3" >Flights</h1>
   <table class="table">
     <thead>
       <tr>
