--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -4,6 +4,8 @@
     {{ tickets | json }}
   </pre> -->
 
+  <h1 class="display-2 text-center mb-3" >Tickets</h1>
+
   <table class="table">
     <thead>
       <tr>
