--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -2,6 +2,7 @@
   <!-- <pre>
     {{ airlines | json }}
   </pre> -->
+  <h1 class="display-2 text-center mb-3" >Air Lines</h1>
   <table class="table">
     <thead>
       <tr>
