--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -3,6 +3,7 @@
   <!-- <pre>
     {{ countries | json }}
   </pre> -->
+  <h1 class="display-2 text-center mb-3" >Countries</h1>
   <table class="table">
     <thead>
       <tr>
