--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -3,6 +3,7 @@
   <!--  <pre>
     {{ customers | json }}
   </pre> -->
+  <h1 class="display-2 text-center mb-3" >Customers</h1>
   <table class="table">
     <thead>
       <tr>
