--- a/src/app/components/flights/flights.component.scss
+++ b/src/app/components/flights/flights.component.scss
@@ -8,3 +8,14 @@ table{
   margin: 0 auto;
 
 };
+
+button{
+  outline:none;
+  border:none;
+  color: #0a58ca;
+
+}
+
+button:hover{
+  cursor: pointer;
+}
