--- a/src/app/components/tickets/delete/delete.component.html
+++ b/src/app/components/tickets/delete/delete.component.html
@@ -44,7 +44,7 @@
         Delete
       </button>
 
-      <a class="m-5 text-seccess" routerLink="/countries">Cancel</a>
+      <a class="m-5 text-seccess" routerLink="/tickets">Cancel</a>
     </form>
     <hr />
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2020-2021</p>
