--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -40,9 +40,9 @@
       <a routerLink="insert" class="m-1">
         <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
       </a>
-      <a [routerLink]="['../tickets'] [queryParams]=flight" class='m-1'>
-        <i [hidden]="rule!=='Customer'" class="fas fa-ticket-alt"> </i>
-      </a>
+        <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id)"><i  class="fas fa-ticket-alt"> </i></button>
+
+
     </td>
       </tr>
       </ng-container>
