--- a/src/app/components/tickets/insert/insert.component.html
+++ b/src/app/components/tickets/insert/insert.component.html
@@ -64,7 +64,13 @@
         Insert
       </button>
 
-      <a class="m-5 text-seccess" routerLink="/countries">Cancel</a>
+      <a class="m-5 text-seccess" routerLink="/tickets
+
+
+
+
+
+      635222.">Cancel</a>
     </form>
     <hr />
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2020-2021</p>
