add cars view but posts

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -38,9 +38,9 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-white" routerLink="/posts">
-      <i class="fas fa-blog"></i>
-      Posts
+    <a class="nav-link text-white" routerLink="/cars">
+      <i class="fas fa-car"></i>
+      Cars
     </a>
   </li>
 
