--- a/src/app/components/tut-http/tut-http.component.html
+++ b/src/app/components/tut-http/tut-http.component.html
@@ -1,8 +1,25 @@
 
-<div *ngIf="httpService.posts | async as posts">
+<div *ngIf="httpService.cars | async as cars">
   <pre>
 
-    {{ posts | json }}
+    {{ cars | json }}
 
   </pre>
 </div>
+
+
+
+<!--
+  /*
+"year": 2016,
+"id": 15,
+"horsepower": 252,
+"make": "audi",
+"model": "a6",
+"price": 52100,
+"img_url": "http://ts2.mm.bing.net/th?id=OIP.M87f9a7ad73341027ed0eb94569f2425eH0&pid=15.1"*/
+
+-->
+
+
+
