--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -2,7 +2,9 @@
   <!-- <pre>
     {{ airlines | json }}
   </pre> -->
-  <h1 class="display-2 text-center mb-3" >Air Lines</h1>
+  <h1 class="display-2 text-center mb-3" >Air Lines <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
+    <i class="far fa-plus-square"> </i>
+  </a></h1>
   <table class="table">
     <thead>
       <tr>
@@ -32,9 +34,9 @@
           <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-         <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
+        <!--  <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
          <i class="far fa-plus-square"> </i>
-        </a></td>
+        </a> --></td>
 
       </tr>
       </ng-container>
