--- a/src/app/components/cars/cars.component.html
+++ b/src/app/components/cars/cars.component.html
@@ -10,7 +10,7 @@
 
 
 <div class="cars-gallery">
-  <div class="cars-card" *ngFor="let car of cars">
+  <div  class="cars-card" *ngFor="let car of cars| paginate: { itemsPerPage: 8, currentPage: p }">
     <header>
       <img *ngIf="car.img_url" [src]="car.img_url" [alt]="car.id">
       <div>
@@ -18,32 +18,10 @@
         <h5> Model: {{ car.model }}</h5>
       </div>
     </header>
-    <p> Horse Power: {{ car.horsepower }}</p>
-   <!--  <ul>
-      <li *ngIf="student.codepen">
-        <a [href]="student.codepen" target="_blank">
-          <i class="fa fa-codepen"></i>
-        </a>
-      </li>
-      <li *ngIf="student.facebook">
-        <a [href]="student.facebook" target="_blank">
-          <i class="fa fa-facebook"></i>
-        </a>
-      </li>
-      <li *ngIf="student.linkedin">
-        <a [href]="student.linkedin" target="_blank">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </li>
-      <li *ngIf="student.github">
-        <a [href]="student.github" target="_blank">
-          <i class="fa fa-github"></i>
-        </a>
-      </li>
-    </ul> -->
-    <!-- <button (click)="removeThisStudent()">Remove</button> -->
+    <p> Horse Power: {{ car.horsepower }} <button (click)="addToFlight()">Add to flight</button></p>
   </div>
 </div>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
 
 
 
