--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -3,7 +3,9 @@
 <!--   <pre>
     {{ flights | json }}
   </pre> -->
-  <h1 class="display-2 text-center mb-3" >Flights</h1>
+  <h1 class="display-2 text-center mb-3" >Flights <a [hidden]="rule!=='Airline'" routerLink="insert" class="m-1">
+    <i class="far fa-plus-square"> </i>
+  </a></h1>
   <table class="table">
     <thead>
       <tr>
@@ -37,9 +39,9 @@
           <a  [hidden]="rule!=='Airline'"routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-      <a routerLink="insert" class="m-1">
+     <!--  <a routerLink="insert" class="m-1">
         <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
-      </a>
+      </a> -->
         <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id)"><i  class="fas fa-ticket-alt"> </i></button>
 
 
