--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -4,7 +4,9 @@
     {{ tickets | json }}
   </pre> -->
 
-  <h1 class="display-2 text-center mb-3" >Tickets</h1>
+  <h1 class="display-2 text-center mb-3" >Tickets <a [hidden]="rule!=='Customer'" routerLink="insert" class="m-1">
+    <i class="far fa-plus-square"> </i>
+  </a></h1>
 
   <table class="table">
     <thead>
@@ -39,9 +41,9 @@
           <a [hidden]="rule!=='Customer'" routerLink="delete" [queryParams]="{id:ticket.id}" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-        <a [hidden]="rule!=='Customer'" routerLink="insert"  [queryParams]="{id:ticket.id}" class='m-1'>
+      <!--   <a [hidden]="rule!=='Customer'" routerLink="insert"  [queryParams]="{id:ticket.id}" class='m-1'>
           <i class="far fa-plus-square"> </i>
-        </a>
+        </a> -->
       </td>
       </tr>
       </ng-container>
