--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -2,7 +2,11 @@
   <!-- <pre>
     {{ airlines | json }}
   </pre> -->
-  <h1 class="display-2 text-center mb-3" >Air Lines <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
+
+<button [hidden]="rule!=='Admin'" (click)="getInfo()"><i class="far fa-question-circle text-danger p-2 fs-1"></i></button>
+
+  <h1 class="display-2 text-center mb-3" ><a [hidden]="rule!=='Admin'" routerLink="info" class="m-1">
+    </a>Air Lines <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
     <i class="far fa-plus-square"> </i>
   </a></h1>
   <table class="table">
