--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -3,6 +3,7 @@
   <!-- <pre>
     {{ countries | json }}
   </pre> -->
+  <button [hidden]="rule!=='Admin'" (click)="getInfo()"><i class="far fa-question-circle text-danger p-2 fs-1"></i></button>
   <h1 class="display-2 text-center mb-3" >Countries <a [hidden]="rule!=='Admin'" routerLink="insert"> <i class="far fa-plus-square"> </i></a> </h1>
 
   <table class="table">
