--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -3,6 +3,7 @@
   <!--  <pre>
     {{ customers | json }}
   </pre> -->
+  <button [hidden]="rule!=='Admin'" (click)="getInfo()"><i class="far fa-question-circle text-danger p-2 fs-1"></i></button>
   <h1 class="display-2 text-center mb-3" >Customers <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
     <i class="far fa-plus-square"> </i>
   </a></h1>
