--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -3,6 +3,7 @@
 <!--   <pre>
     {{ flights | json }}
   </pre> -->
+  <button [hidden]="rule!=='Customer'" (click)="getInfo()"><i class="far fa-question-circle text-danger p-2 fs-1"></i></button>
   <h1 class="display-2 text-center mb-3" >Flights <a [hidden]="rule!=='Airline'" routerLink="insert" class="m-1">
     <i class="far fa-plus-square"> </i>
   </a></h1>
