--- a/src/app/components/tickets/tickets.component.html
+++ b/src/app/components/tickets/tickets.component.html
@@ -3,6 +3,7 @@
  <!--  <pre>
     {{ tickets | json }}
   </pre> -->
+  <button [hidden]="rule!=='Customer'" (click)="getInfo()"><i class="far fa-question-circle text-danger p-2 fs-1"></i></button>
 
   <h1 class="display-2 text-center mb-3" >Tickets <a [hidden]="rule!=='Customer'" routerLink="insert" class="m-1">
     <i class="far fa-plus-square"> </i>
