--- a/src/app/components/customers/insert/insert.component.html
+++ b/src/app/components/customers/insert/insert.component.html
@@ -131,12 +131,12 @@
           <input
             #creditcardnoF="ngModel"
             ngModel
-            name="creaditcardno"
+            name="creditcardno"
             required
             [ngClass]="{ 'is-invalid': creditcardnoF.errors && creditcardnoF.touched }"
             type="text"
             placeholder={{craditCardNo}}
-            id="creaditcardno"
+            id="creditcardno"
             class="form-control"
             autocomplete="Credit Card Number"
           />
