--- a/src/app/components/flights/results/results.component.html
+++ b/src/app/components/flights/results/results.component.html
@@ -1,6 +1,9 @@
 
 <div *ngIf="flights">
 
+  <h1 class="display-2 text-center mb-3" >Flights <a [hidden]="rule!=='Airline'" routerLink="insert" class="m-1">
+    <i class="far fa-plus-square"> </i>
+  </a></h1>
   <table class="table">
     <thead>
       <tr>
