update buy ticket from flight view

--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -43,7 +43,7 @@
      <!--  <a routerLink="insert" class="m-1">
         <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
       </a> -->
-        <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id,customer_id)"><i  class="fas fa-ticket-alt"> </i></button>
+        <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id)"><i  class="fas fa-ticket-alt"> </i></button>
 
 
     </td>
