--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -28,15 +28,32 @@
             <div class="col-sm-6"> <select class="browser-default custom-select mb-4" id="select" name='from'  #fromF="ngModel"
               ngModel>
                     <option value="" disabled="" selected="">From City/Airport</option>
-                    <option value="1">ISRAEL</option>
-                    <option value="2">ITALY</option>
+                    <option value="1">Israel</option>
+                    <option value="2">Italy</option>
+                    <option value="3">Spain</option>
+                    <option value="4">Cyprus</option>
+                    <option value="5">Czech Republic</option>
+                    <option value="6">Denmark</option>
+                    <option value="7">Ecuador</option>
+                    <option value="8">Finland</option>
+                    <option value="9">France</option>
+                    <option value="10">Gubon</option>
+
 
                 </select> </div>
             <div class="col-sm-6"> <select class="browser-default custom-select mb-4" id="select" name="to"  #toF="ngModel"
               ngModel>
                     <option value="" disabled="" selected="">To City/Airport</option>
-                    <option value="2">ITALY</option>
-                    <option value="1">ISRAEL</option>
+                    <option value="1">Israel</option>
+                    <option value="2">Italy</option>
+                    <option value="3">Spain</option>
+                    <option value="4">Cyprus</option>
+                    <option value="5">Czech Republic</option>
+                    <option value="6">Denmark</option>
+                    <option value="7">Ecuador</option>
+                    <option value="8">Finland</option>
+                    <option value="9">France</option>
+                    <option value="10">Gubon</option>
                 </select> </div>
         </div>
         <!--Third Row-->
