--- a/src/app/components/flights/results/results.component.html
+++ b/src/app/components/flights/results/results.component.html
@@ -40,9 +40,7 @@
       <a routerLink="insert" class="m-1">
         <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
       </a>
-      <a routerLink="../../tickets" class='m-1'>
-        <i [hidden]="rule!=='Customer'" class="fas fa-ticket-alt"> </i>
-      </a></td>
+      <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id)"><i  class="fas fa-ticket-alt"> </i></button></td>
       </tr>
       </ng-container>
     </tbody>
