--- a/src/app/components/cars/cars.component.scss
+++ b/src/app/components/cars/cars.component.scss
@@ -33,13 +33,13 @@ img:hover{
 
 
 div h4 {
-  color: orange;
+  color:  #0d6efd;
   font-size: 17px;
   margin: 10px;
 }
 
 div h5,p {
-  color: rgb(173, 146, 96);
+  color:  #4f85d8;
   font-size: 13px;
   margin:10px;
 
@@ -49,11 +49,17 @@ button{
   outline: none;
   user-select: none;
   border: none;
-  background-color: orange;
+  background-color: #0d6efd;
   color:white;
+  transition: width 0.8s;
 }
 
+button:hover{
+  background-color:#adaeaf;
+  color: #0d6efd;
 
+  transform: scale(1.1,1.1)
+}
 
 
 
