--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -35,10 +35,10 @@
         <td scope="row">{{customer.credit_card_no}}</td>
 
         <td scope="row">
-          <a [hidden]="rule!=='Admin'" routerLink="update" class='m-1'>
+          <a [hidden]="rule!=='Admin'" routerLink="update" [queryParams]="{id:customer.id,firstname: customer.first_name,lastname:customer.last_name,address:customer.address,phoneno:customer.phone_no,userid:customer.user_id,creditcardno:customer.credit_card_no}" class='m-1'>
             <i class="fas fa-edit"> </i>
           </a>
-          <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
+          <a [hidden]="rule!=='Admin'" routerLink="delete" [queryParams]="{id:customer.id}" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
       <!-- <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
