update customers,airlines update&delete

--- a/src/app/components/airlines/update/update.component.html
+++ b/src/app/components/airlines/update/update.component.html
@@ -44,7 +44,7 @@
             [ngClass]="{ 'is-invalid': countryidF.errors && countryidF.touched }"
             type="text"
             placeholder={{countryid}}
-            id="country"
+            id="countryid"
             class="form-control"
             autocomplete="CountryID"
           />
