--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -40,9 +40,9 @@
           <a  [hidden]="rule!=='Airline'"routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-     <!--  <a routerLink="insert" class="m-1">
-        <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
-      </a> -->
+         <a routerLink="map" class="m-1">
+          <i class="fas fa-route"></i>
+       </a>
         <button [hidden]="rule!=='Customer'" (click)="buyTicket(flight.id)"><i  class="fas fa-ticket-alt"> </i></button>
 
 
