--- a/src/app/components/flights/map/map.component.scss
+++ b/src/app/components/flights/map/map.component.scss
@@ -1,3 +1,20 @@
 agm-map{
   height:300px;
+
 }
+
+.container{
+  opacity: 0.5;
+  transition: opacity 0.8s;
+  box-shadow: 2px 2px 2px;
+
+
+}
+
+.container:hover {
+  opacity: 1;
+}
+
+
+
+
